# mongodb-rag-v1

./: .env.sample  .gitignore  README.md  Steps-To-Follow.md  knowledge_base.json  mcp.json.sample  prompt.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  embeddings.py  indexes.py  llm.py  main.py  rag.py  retrieval.py
docs/: design.md  requirements.md  tasks.md
scripts/: ingest.py  smoke.py
tests/: conftest.py  test_config.py  test_e2e_fakes.py  test_embeddings.py  test_indexes.py  test_ingest.py  test_llm.py  test_main.py  test_retrieval.py
