[project]
name = "mongodb-rag"
version = "0.1.0"
description = "Hybrid Search RAG (vector + full-text) on MongoDB Atlas with Streamlit, Bedrock, and Voyage embeddings."
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "pymongo>=4.8",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "streamlit>=1.39",
    "voyageai>=0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
